# RustApp

./: .gitignore  ERROR_CODES.md  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: release.yml  screenshots.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  commands.rs  config_files.rs  database.rs  dependencies.rs  error.rs  installer.rs  launch_settings.rs  lib.rs  main.rs  models.rs  plugins.rs  rcon.rs  saved_commands.rs  server_process.rs  umod_scraper.rs  utils.rs  wipe_schedule.rs
src/api/: tauriCommands.ts
src/components/: ConfigFileEditor.tsx  DependencyChecker.tsx  EmptyState.tsx  InstalledPluginRow.tsx  InstalledPluginsList.tsx  Modal.tsx  PluginCard.tsx  PluginInfoModal.tsx  PluginStoreBrowser.tsx  SavedCommands.tsx  ServerProfileForm.tsx  ServerProfileList.tsx  Skeleton.tsx  Toast.tsx  WipeScheduleCard.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/lib/: errors.ts
src/pages/: Activity.tsx  Console.tsx  Dashboard.tsx  Help.tsx  Install.tsx  InstalledPlugins.tsx  Players.tsx  PluginStore.tsx  Servers.tsx  Settings.tsx
src/state/: installStore.ts  serverProcessStore.ts  serverStore.ts  themeStore.ts  updateStore.ts
src/styles/: globals.css
src/types/: models.ts
tests/screenshots/: capture.spec.ts  mock-tauri.js
