[package]
name = "rustapp"
version = "0.1.0"
description = "uMod (Oxide) plugin manager for Rust game servers"
authors = ["RustyCMD"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "rustapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync", "macros", "io-util", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP / scraping
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
scraper = "0.19"

# RCON for Rust servers (Facepunch uses websocket RCON, not Source RCON)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Versioning
semver = { version = "1", features = ["serde"] }

# Config formats
rust-ini = "0.21"

# Error handling + logging
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
once_cell = "1"
regex = "1"
url = "2"

[features]
# By default Tauri runs in production mode. Use `tauri dev` for dev.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
